src/styles/main.scss
$black: #1C1C1C;
$white: #ddd;
$light: #484848;

$accent-light: #84A987;
$accent-medium: #648f67;
$accent-dark: #5c835f;

$neg-accent-light: #a984a6;
$neg-accent-medium: #8f648b;
$neg-accent-dark: #785475;

body, html {
  background-color: $black;
  color: #999;
  margin: 0;
  padding: 0;
}

#app {
  background-color: #383838;
}

#app-component {
}

/*------------------ General ----------------*/
.center-content {
  text-align: center;
}

/*------------------ Top Menu ----------------*/
.top-bar {
  background-color: $light;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 1em;
  padding-bottom: 2em;
  color: $white;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.title {
  font-size: 3em;
  text-align: center;
  font-family: 'Titillium Web', sans-serif;
}

.tag-line {
  text-align: center;
  font-size: 1.2em;
  font-family: 'Titillium Web', sans-serif;
}

.nightlife-input {
  background-color: #1C1C1C;
  color: #999;
  padding: 0.2em;
  border: none;
  border-radius: 8px;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
  font-size: 2em;
  text-align: center;
}

.nightlife-input::placeholder {
  color: #444;
}

.nightlife-button {
  outline: 0;
  background-color: $accent-light;
  padding: 0.15em 0.5em 0.15em 0.5em;
  font-size: 25px;
  color: #333;
  border: none;
  border-radius: 0.25em;
}

.nightlife-button:hover {
  background-color: $accent-medium;
  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.4), 0 0px 20px 0 rgba(0, 0, 0, 0.4);
}

.nightlife-button:focus {
  background-color: $accent-dark;
  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.4), 0 0px 20px 0 rgba(0, 0, 0, 0.4);
}

.alt-btn {
  background-color: $neg-accent-light;
}

.alt-btn:hover {
  background-color: $neg-accent-medium;
}

.alt-btn:focus {
  background-color: $neg-accent-dark;
}

.button-padding {
  padding: 0.5em;
}

/*-- Small Devices --*/
@media screen and (max-width: 700px) {
  .nightlife-button {
    font-size: 20px;
  }
}

@media screen and (max-width: 330px) {
  .nightlife-button {
    font-size: 15px;
  }
}

.label {
  font-size: 2em;
  color: #999;
  text-align: center;
  font-family: 'Titillium Web', sans-serif;
}

.nightlife-input-group {
  text-align: center;
}

.nightlife-input:focus {
  box-shadow: 0 0px 8px 0 rgba(200, 200, 200, 0.4), 0 0px 20px 0 rgba(200, 200, 200, 0.4);
  outline: none;
}

.login-group {
  text-align: center;
  margin: 1em;
}

.nightlife-label {
  margin-top: 0.2em;
}

.main-button {
  margin-left: 0.5em;
  margin-right: 0.5em;
}

#outer-container {
  margin-bottom: 1em;
}

/*-- Small Devices -- */
@media screen and (max-width: 700px) {
  .title {
    font-size: 2em;
  }

  .tag-line {
    font-size: .8em;
  }

  .nightlife-input {
    font-size: 1.5em;
  }
}

@media screen and (max-width: 330px) {
  .nightlife-input {
    font-size: 1em;
  }
}

/*------------------ Input Form -------------------*/
.outer-input-form {
  display: flex;
  width: 100%;
  justify-content: center;
  padding-bottom: 2em;
}

.input-form {
  display: flex;
  flex-direction: column;
}

/*------------------ Fonts ----------------*/
/* latin-ext */
@font-face {
  font-family: 'Titillium Web';
  font-style: normal;
  font-weight: 200;
  src: local('Titillium Web ExtraLight'), local('TitilliumWeb-ExtraLight'), url(https://fonts.gstatic.com/s/titilliumweb/v5/anMUvcNT0H1YN4FII8wpr8iECVzy6_x5mCR1UJr_CgI.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Titillium Web';
  font-style: normal;
  font-weight: 200;
  src: local('Titillium Web ExtraLight'), local('TitilliumWeb-ExtraLight'), url(https://fonts.gstatic.com/s/titilliumweb/v5/anMUvcNT0H1YN4FII8wprwWgvz7nq97YPMIWeoEnHDE.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}

/*------------------ Notifications ----------------*/
.notification {
  position: fixed;
  text-align: center;
  color: $black;
  border: 1px solid $black
}

.good {
  background-color: #448844;
  padding: 1em;
}

.warn {
  background-color: #bbbb22;
  padding: 1em;
}

.error {
  background-color: $neg-accent-light;
  padding: 1em;
}

/*------------------ Already Logged In ----------------*/
.already-logged-in {
  text-align: center;
}

/*------------------ Search ----------------*/
.bar-container {
  display: flex;
}

.bar-thumb {
  width: 150px;
  -webkit-filter: grayscale(40%); /* Safari 6.0 - 9.0 */
  filter: grayscale(40%);
  border-radius: 0.5em;
}

.bar-card {
  display: flex;
  flex: 8;
  flex-direction: column;
  padding: 0 1em 1em 1em;
  border: solid 1px $black;
  font-size: 25px;
  border-radius: 10px;
  margin-bottom: 1em;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.bar-content {
  display: flex;
  flex-direction: row;
}

.pad {
  flex: 3;
}

.bar-title {
  font-size: 2em;
  font-family: 'Titillium Web', sans-serif;
  border: solid 0 0 1px 0 $black;
}

.image-container {
  text-align: right;
}

.bar-status {
  padding-left: 1em;
  text-align: left;
}

.green {
  color: green;
}

/*-- Small Devices -- */
@media screen and (max-width: 700px) {
  .pad {
    flex: 0;
  }

  .bar-card {
    border: none;
    font-size: 18px;
    margin-bottom: 0px;
    box-shadow: none;
  }

  .bar-title {
    font-size: 1.5em;
  }

}

@media screen and (max-width: 330px) {
  .pad {
    flex: 0;
  }

  .bar-card {
    border: none;
    font-size: 15px;
    margin-bottom: 0px;
    box-shadow: none;
  }

  .bar-title {
    font-size: 20px;
  }

  .bar-thumb {
    width: 80px;
    border-radius: 0.5em;
  }
}

/*------------------ Bottom Bar ----------------*/
#bottom-bar-container {
  background-color: $black;
}

.bottom-button {
  margin: 1em 0.5em 2em 0.5em;
}

